      if it's non-empty.

    - If the compiler produces no object file or an empty object file, but
      gives a zero exit status (could be due to a file system problem, a buggy
      program specified by CCACHE_PREFIX, etc.), ccache copes with it properly.

    - Added installcheck and distcheck make targets.

    - Clarified cache size limit options' semantics.

    - Improved display of cache max size values.

    - For debugging purposes, the variable CCACHE_VERBOSE may now be set to
      make ccache print executed commands to standard output.

  BUG FIXES:

    - Fixed build on FreeBSD.

    - Improved detection of home directory.

    - User-defined CPPFLAGS and LDFLAGS are now respected in the Makefile.

    - Fixed NFS issues.

    - Bail out on too hard compiler options --coverage, -fprofile-arcs,
      -fprofile-generate, -fprofile-use, -ftest-coverage and -save-temps. Also
      bail out on "@file" style options.

    - -MD/-MMD options without -MT/-MF are now handled correctly.

    - Added support for -Wp,-MD and -Wp,-MMD options.

    - Debug information containing line numbers of predefined and command-line
      macros (enabled with the compiler option -g3) will now be correct.

    - Corrected LRU cleanup handling of object files.

    - utimes() is now used instead of utime() when available.

    - Non-writable cache directories are now handled gracefully.

    - Corrected documentation about sharing the cache directory.

    - Fixed compilation warnings from GCC 4.3.

    - The command specified by CCACHE_PREFIX is no longer part of the hash.

    - Fixed bad memory access spotted by Valgrind.

    - Fixed a bug in x_realloc.

    - Removed deprecated constructions from ccache.yo.

    - Freed memory is no longer referenced when compiling a .i/.ii file and
      falling back to running the real compiler.

    - The test suite is now immune to external values of the CCACHE_*
      environment variables.